# WEB_HW2

./: Dockerfile  README.md  pyproject.toml  setup.py
python_bot/: __init__.py  addressbook.py  command_handlers.py  file_sorter.py  main.py  notebook.py
